remove numba and numpy functions

--- a/Content/scalar_vector.ipynb
+++ b/Content/scalar_vector.ipynb
@@ -181,6 +181,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.linspace(start=6.1, stop=3.1, num=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.1, 5.1, 4.1, 3.1])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m      \n",
+       "\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mstop\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mnum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mendpoint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mretstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mCall signature:\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mType:\u001b[0m            _ArrayFunctionDispatcher\n",
+       "\u001b[0;31mString form:\u001b[0m     <function linspace at 0x7792a4028d60>\n",
+       "\u001b[0;31mFile:\u001b[0m            ~/anaconda3/lib/python3.11/site-packages/numpy/core/function_base.py\n",
+       "\u001b[0;31mDocstring:\u001b[0m      \n",
+       "Return evenly spaced numbers over a specified interval.\n",
+       "\n",
+       "Returns `num` evenly spaced samples, calculated over the\n",
+       "interval [`start`, `stop`].\n",
+       "\n",
+       "The endpoint of the interval can optionally be excluded.\n",
+       "\n",
+       ".. versionchanged:: 1.16.0\n",
+       "    Non-scalar `start` and `stop` are now supported.\n",
+       "\n",
+       ".. versionchanged:: 1.20.0\n",
+       "    Values are rounded towards ``-inf`` instead of ``0`` when an\n",
+       "    integer ``dtype`` is specified. The old behavior can\n",
+       "    still be obtained with ``np.linspace(start, stop, num).astype(int)``\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "start : array_like\n",
+       "    The starting value of the sequence.\n",
+       "stop : array_like\n",
+       "    The end value of the sequence, unless `endpoint` is set to False.\n",
+       "    In that case, the sequence consists of all but the last of ``num + 1``\n",
+       "    evenly spaced samples, so that `stop` is excluded.  Note that the step\n",
+       "    size changes when `endpoint` is False.\n",
+       "num : int, optional\n",
+       "    Number of samples to generate. Default is 50. Must be non-negative.\n",
+       "endpoint : bool, optional\n",
+       "    If True, `stop` is the last sample. Otherwise, it is not included.\n",
+       "    Default is True.\n",
+       "retstep : bool, optional\n",
+       "    If True, return (`samples`, `step`), where `step` is the spacing\n",
+       "    between samples.\n",
+       "dtype : dtype, optional\n",
+       "    The type of the output array.  If `dtype` is not given, the data type\n",
+       "    is inferred from `start` and `stop`. The inferred dtype will never be\n",
+       "    an integer; `float` is chosen even if the arguments would produce an\n",
+       "    array of integers.\n",
+       "\n",
+       "    .. versionadded:: 1.9.0\n",
+       "\n",
+       "axis : int, optional\n",
+       "    The axis in the result to store the samples.  Relevant only if start\n",
+       "    or stop are array-like.  By default (0), the samples will be along a\n",
+       "    new axis inserted at the beginning. Use -1 to get an axis at the end.\n",
+       "\n",
+       "    .. versionadded:: 1.16.0\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "samples : ndarray\n",
+       "    There are `num` equally spaced samples in the closed interval\n",
+       "    ``[start, stop]`` or the half-open interval ``[start, stop)``\n",
+       "    (depending on whether `endpoint` is True or False).\n",
+       "step : float, optional\n",
+       "    Only returned if `retstep` is True\n",
+       "\n",
+       "    Size of spacing between samples.\n",
+       "\n",
+       "\n",
+       "See Also\n",
+       "--------\n",
+       "arange : Similar to `linspace`, but uses a step size (instead of the\n",
+       "         number of samples).\n",
+       "geomspace : Similar to `linspace`, but with numbers spaced evenly on a log\n",
+       "            scale (a geometric progression).\n",
+       "logspace : Similar to `geomspace`, but with the end points specified as\n",
+       "           logarithms.\n",
+       ":ref:`how-to-partition`\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> np.linspace(2.0, 3.0, num=5)\n",
+       "array([2.  , 2.25, 2.5 , 2.75, 3.  ])\n",
+       ">>> np.linspace(2.0, 3.0, num=5, endpoint=False)\n",
+       "array([2. ,  2.2,  2.4,  2.6,  2.8])\n",
+       ">>> np.linspace(2.0, 3.0, num=5, retstep=True)\n",
+       "(array([2.  ,  2.25,  2.5 ,  2.75,  3.  ]), 0.25)\n",
+       "\n",
+       "Graphical illustration:\n",
+       "\n",
+       ">>> import matplotlib.pyplot as plt\n",
+       ">>> N = 8\n",
+       ">>> y = np.zeros(N)\n",
+       ">>> x1 = np.linspace(0, 10, N, endpoint=True)\n",
+       ">>> x2 = np.linspace(0, 10, N, endpoint=False)\n",
+       ">>> plt.plot(x1, y, 'o')\n",
+       "[<matplotlib.lines.Line2D object at 0x...>]\n",
+       ">>> plt.plot(x2, y + 0.5, 'o')\n",
+       "[<matplotlib.lines.Line2D object at 0x...>]\n",
+       ">>> plt.ylim([-0.5, 1])\n",
+       "(-0.5, 1)\n",
+       ">>> plt.show()\n",
+       "\u001b[0;31mClass docstring:\u001b[0m\n",
+       "Class to wrap functions with checks for __array_function__ overrides.\n",
+       "\n",
+       "All arguments are required, and can only be passed by position.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "dispatcher : function or None\n",
+       "    The dispatcher function that returns a single sequence-like object\n",
+       "    of all arguments relevant.  It must have the same signature (except\n",
+       "    the default values) as the actual implementation.\n",
+       "    If ``None``, this is a ``like=`` dispatcher and the\n",
+       "    ``_ArrayFunctionDispatcher`` must be called with ``like`` as the\n",
+       "    first (additional and positional) argument.\n",
+       "implementation : function\n",
+       "    Function that implements the operation on NumPy arrays without\n",
+       "    overrides.  Arguments passed calling the ``_ArrayFunctionDispatcher``\n",
+       "    will be forwarded to this (and the ``dispatcher``) as if using\n",
+       "    ``*args, **kwargs``.\n",
+       "\n",
+       "Attributes\n",
+       "----------\n",
+       "_implementation : function\n",
+       "    The original implementation passed in."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.linspace?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -204,9 +398,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
