review hadamard notebook and tests

--- a/Content/hadamard.ipynb
+++ b/Content/hadamard.ipynb
@@ -91,7 +91,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "This product can be represented by"
@@ -206,7 +209,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "This product can be represented by"
@@ -340,7 +346,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "This product can be represented by"
@@ -458,7 +467,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "This product can be represented by"
@@ -491,16 +503,14 @@
    "metadata": {},
    "source": [
     "Create the functions below according to `template.py`: \n",
-    "* `hadamard_real_dumb`\n",
-    "* `hadamard_real_numpy`\n",
-    "* `hadamard_real_numba` \n",
+    "* `hadamard_real`\n",
     "* `hadamard_complex` \n",
     "    \n",
     "These functions must pass the following tests defined in `tests_template.py`:\n",
     "* `test_hadamard_real_different_shapes`\n",
     "* `test_hadamard_real_compare_asterisk`\n",
-    "* `test_hadamard_complex_compare_asterisk`\n",
-    "* `test_hadamard_complex_invalid_function`"
+    "* `test_hadamard_real_ignore_complex`\n",
+    "* `test_hadamard_complex_compare_asterisk`"
    ]
   },
   {
@@ -528,9 +538,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
