--- a/Content/vector-norms.ipynb
+++ b/Content/vector-norms.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{x}$ be a $N \\times 1$ vector given by:"
+    "Let $\\mathbf{x}$ be a $N \\times 1$ real vector given by:"
    ]
   },
   {
@@ -168,16 +168,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm. This function **must use your** `dot` **function** to compute the 2-norm. Use `p = 2` to define the 2-norm, `p = 1` to define the 1-norm and `p = 0` to define the $\\infty$-norm. Hints: (i) Use the chained conditionals `if`, `elif`, `else` (see the Software Carpentry lesson [Making Choices](http://swcarpentry.github.io/python-novice-inflammation/05-cond/index.html)). (ii) Use the function [numpy.abs](https://docs.scipy.org/doc/numpy/reference/generated/numpy.absolute.html) to compute the 1-norm. (iii) Use the function [numpy.max](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.max.html) to compute the $\\infty$-norm.\n",
+    "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm, according to the template given below:\n",
+    "\n",
+    "```python\n",
+    "def vec_norm(x, p):\n",
+    "    '''\n",
+    "    Compute the p-norm of a given real vector 'x'.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : numpy array 1d\n",
+    "        Vector for which the norm will be computed.\n",
+    "    p : positive integer\n",
+    "        Positive integer defining the norm. The possible values \n",
+    "        0, 1 and 2 define the inf-, 1- and 2-norm, respectively.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : positive scalar\n",
+    "        Positive scalar representing the computed p-norm.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```\n",
+    "\n",
+    "The function `vec_norm` **must**: \n",
+    "* verify if the given `x` is a numpy array with ndim = 1;\n",
+    "* verify if `p` is a positive integer equal to 0, 1 or 2;\n",
+    "* ignore possible imaginary of the input parameters;\n",
+    "* use your `dot_real` function to compute the 2-norm;\n",
+    "\n",
+    "**Hints:** (i) Use the chained conditionals `if`, `elif`, `else` (see the Software Carpentry lesson [Making Choices](https://swcarpentry.github.io/python-novice-inflammation/07-cond.html)). (ii) Use the function [numpy.abs](https://docs.scipy.org/doc/numpy/reference/generated/numpy.absolute.html) to compute the 1-norm. (iii) Use the function [numpy.max](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.max.html) to compute the $\\infty$-norm.\n",
     "\n",
     "\n",
-    "2. Create one test to verify each one of the six inequalities given below:\n",
-    "    * $f(\\mathbf{x} + \\mathbf{y}) \\leq f(\\mathbf{x}) + f(\\mathbf{y})$\n",
-    "    * $f(\\alpha \\, \\mathbf{x}) \\leq \\: \\mid \\alpha \\mid \\, f(\\mathbf{x})$\n",
-    "    * $\\mid \\mathbf{x}^{\\top}\\mathbf{y} \\mid \\leq \\| \\mathbf{x} \\|_{2} \\| \\mathbf{y} \\|_{2}$\n",
-    "    * $\\| \\mathbf{x} \\|_{2} \\leq \\| \\mathbf{x} \\|_{1} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{2}$\n",
-    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{\\infty}$\n",
-    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{1} \\leq N \\, \\| \\mathbf{x} \\|_{\\infty}$"
+    "2. Create seven tests. Each test must verify one of the inequalities and have the corresponding names given below:\n",
+    "    * $f(\\mathbf{x}) > 0$ for any $\\mathbf{x}$ having at least one non-null element (`test_vec_norm_positivity`)\n",
+    "    * $f(\\mathbf{x} + \\mathbf{y}) \\leq f(\\mathbf{x}) + f(\\mathbf{y})$ (`test_vec_norm_triangle_inequality`)\n",
+    "    * $f(\\alpha \\, \\mathbf{x}) \\leq \\: \\mid \\alpha \\mid \\, f(\\mathbf{x})$ (`test_vec_norm_scalar_multiplier`)\n",
+    "    * $\\mid \\mathbf{x}^{\\top}\\mathbf{y} \\mid \\leq \\| \\mathbf{x} \\|_{2} \\| \\mathbf{y} \\|_{2}$ (`test_vec_norm_Cauchy_Schwarz_inequality`)\n",
+    "    * $\\| \\mathbf{x} \\|_{2} \\leq \\| \\mathbf{x} \\|_{1} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{2}$ (`test_vec_norm_p2_p1_relationship`)\n",
+    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{\\infty}$ (`test_vec_norm_pinf_p2_relationship`)\n",
+    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{1} \\leq N \\, \\| \\mathbf{x} \\|_{\\infty}$ (`test_vec_norm_pinf_p1_relationship`)"
    ]
   },
   {
@@ -190,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -204,9 +237,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
