hadamard, outer and vector norms class, updated template and test_template files

--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    outer_real(x, y):\n",
+    "    outer_real_simple(x, y):\n",
     "\n",
     "        N = size(x)\n",
     "        M = size(y)\n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    outer_real(x, y):\n",
+    "    outer_real_row(x, y):\n",
     "\n",
     "        N = size(x)\n",
     "        M = size(y)\n",
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    outer_real(x, y):\n",
+    "    outer_real_column(x, y):\n",
     "\n",
     "        N = size(x)\n",
     "        M = size(y)\n",
@@ -292,7 +292,9 @@
    "metadata": {},
    "source": [
     "Create the functions below according to `template.py`: \n",
-    "* `outer_real`\n",
+    "* `outer_real_simple`\n",
+    "* `outer_real_row`\n",
+    "* `outer_real_column`\n",
     "* `outer_complex` \n",
     "    \n",
     "These functions must pass the following tests defined in `tests_template.py`:\n",
@@ -303,7 +305,8 @@
     "* `test_outer_real_distributivity`\n",
     "* `test_outer_real_scalar_multiplication`\n",
     "* `test_outer_real_ignore_complex`\n",
-    "* `test_outer_complex_compare_numpy_outer`"
+    "* `test_outer_complex_compare_numpy_outer`\n",
+    "* `test_outer_complex_invalid_function`"
    ]
   },
   {
