fix some minor text errors

--- a/Content/dot.ipynb
+++ b/Content/dot.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "source": [
     "Create the functions below according to `template.py`: \n",
-    "* `dot_real_dumb`\n",
+    "* `dot_real`\n",
     "* `dot_complex` \n",
     "    \n",
     "These functions must pass the following tests defined in `tests_template.py`:\n",
