--- a/Content/vector-norms.ipynb
+++ b/Content/vector-norms.ipynb
@@ -171,7 +171,7 @@
     "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm, according to the template given below:\n",
     "\n",
     "```python\n",
-    "def vec_norm(x, p):\n",
+    "def vec_norm(x, p, check_input=True):\n",
     "    '''\n",
     "    Compute the p-norm of a given real vector 'x'.\n",
     "\n",
@@ -182,6 +182,8 @@
     "    p : positive integer\n",
     "        Positive integer defining the norm. The possible values \n",
     "        0, 1 and 2 define the inf-, 1- and 2-norm, respectively.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
