review matrix-vector, matrix-matrix, matrix-norms and flops classes

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_vector_real(A, x):\n",
+    "    matvec_real(A, x):\n",
     "    \n",
     "        N, M = shape(A)\n",
     "        \n",
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_vector_real(A, x):\n",
+    "    matvec_dot(A, x):\n",
     "    \n",
     "        N, M = shape(A)\n",
     "        \n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_vector_real(A, x):\n",
+    "    matvec_columns(A, x):\n",
     "    \n",
     "        N, M = shape(A)\n",
     "        \n",
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_vector_complex(A, x):\n",
+    "    matvec_complex(A, x):\n",
     "\n",
     "        # compute the real and imaginary parts of the product\n",
     "        y_R  = matrix_vector_real(Re(A), Re(x))\n",
@@ -225,8 +225,7 @@
    "metadata": {},
    "source": [
     "Create the functions below according to `template.py`: \n",
-    "* `matvec_real_dumb`\n",
-    "* `matvec_real_numba`\n",
+    "* `matvec_real_simple`\n",
     "* `matvec_real_dot` \n",
     "* `matvec_real_columns`\n",
     "* `matvec_complex`\n",
@@ -234,7 +233,9 @@
     "These functions must pass the following tests defined in `tests_template.py`:\n",
     "* `test_matvec_real_input_doesnt_match`\n",
     "* `test_matvec_real_functions_compare_numpy_dot`\n",
-    "* `test_matvec_complex_compare_numpy_dot`"
+    "* `test_matvec_real_functions_ignore_complex`\n",
+    "* `test_matvec_complex_compare_numpy_dot`\n",
+    "* `test_matvec_complex_invalid_function`"
    ]
   },
   {
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +281,7 @@
        "array([0., 1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +333,7 @@
        "       [15, 16, 17, 18, 19]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +353,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -374,7 +375,7 @@
        "array([ 30.,  80., 130., 180.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +395,7 @@
        "array([ 30.,  80., 130., 180.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previously presented algorithm for calculating a [simple moving average filter](https://github.com/birocoles/Disciplina-metodos-computacionais/tree/main/Content/first_steps_Python/SMA) can be formulated as the product of a matrix $\\mathbf{A}$ and the original data $\\mathbf{x}$, where $\\mathbf{A}$ depends on the number of points forming the moving window and the number of data. For example, consider a data vector $\\mathbf{x}$ given by"
+    "The previously presented algorithm for calculating a `simple moving average filter` can be formulated as the product of a matrix $\\mathbf{A}$ and the original data $\\mathbf{x}$, where $\\mathbf{A}$ depends on the number of points forming the moving window and the number of data. For example, consider a data vector $\\mathbf{x}$ given by"
    ]
   },
   {
@@ -472,11 +473,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show that the matrix formulation presented above is equivalent to that presented in `first_steps_Python\\SMA\\`. To do that:\n",
+    "Show that the matrix formulation presented above is equivalent to that presented in `first_steps_Python\\SMA\\`. To do that, create a function called `mat_sma` according to the template given below:\n",
     "\n",
-    "1. Create a function called `mat_sma`, in your `my_functions.py` file, to calculate the moving average filter by using the matrix-vector product. This function must receive two arguments: the data vector and the number of points forming the moving window. This function must create the matrix $\\mathbf{A}$ and use one of your three functions for calculating the matrix-vector product.\n",
+    "```python\n",
+    "def mat_sma(data, window, check_input=True):\n",
+    "    '''\n",
+    "    Calculate the moving average filter by using the matrix-vector product.\n",
     "\n",
-    "2. In your `test_my_functions.py` file, create a test to compare the results produced by this function and the results produced by that one presented in `first_steps_Python\\SMA\\`."
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : numpy array 1d\n",
+    "        Vector containing the data.\n",
+    "    window : positive integer\n",
+    "        Positive integer defining the number of elements forming the window.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : nunmpy array 1d\n",
+    "        Vector containing the filtered data.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```\n",
+    "\n",
+    "The function `mat_sma` **must**: \n",
+    "* verify if the given `data` is a numpy array with ndim = 1;\n",
+    "* verify if `window` is a positive integer;\n",
+    "* assert that the `window` size is smaller than `data` size;\n",
+    "* assert that `window` size is odd;\n",
+    "* create the matrix $\\mathbf{A}$ and use one of your three functions for calculating the matrix-vector product. "
    ]
   },
   {
@@ -488,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,9 +547,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.33333333, 0.33333333, 0.33333333, 0.        , 0.        ],\n",
+       "       [0.        , 0.33333333, 0.33333333, 0.33333333, 0.        ],\n",
+       "       [0.        , 0.        , 0.33333333, 0.33333333, 0.33333333],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A"
    ]
@@ -599,11 +643,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on this,\n",
+    "Based on this, create a function called `deriv1d` according to the template given below:\n",
     "\n",
-    "1. In your `my_functions.py` file, create a function called `deriv1d` that receives a $N \\times 1$ data vector $\\mathbf{y}$ and the interval $h$ and returns the first derivatives calculated according to the matrix-vector product presented above. The function must use one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
+    "```python\n",
+    "def deriv1d(data, spacing, check_input=True):\n",
+    "    '''\n",
+    "    Calculate the moving average filter by using the matrix-vector product.\n",
     "\n",
-    "2. In your `test_my_function.py` file, create one test for your function `deriv1d`. In this test, create a vector `theta` with the function [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*numpy.pi/1000`. Create a data vector `y` by using the [`numpy.sin`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function. Then, calculate a vector `z_true` by using the [`numpy.cos`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function. Finally, calculate a `z_calc` vector with your function `deriv1d` and compare with the `z_true` vector by using the routine [`numpy.testing.assert_almost_equal`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.testing.assert_almost_equal.html). In the routine `numpy.testing.assert_almost_equal`, use `decimal = 3`. Remember that the first and last elements of `z_calc` will be equal to zero. Be careful!"
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : numpy array 1d\n",
+    "        Vector containing the data.\n",
+    "    spacing : positive scalar\n",
+    "        Positive scalar defining the constant data spacing.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : nunmpy array 1d\n",
+    "        Vector containing the computed derivative.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```\n",
+    "\n",
+    "The function `deriv1d` **must**: \n",
+    "* verify if the given `data` is a numpy array with ndim = 1;\n",
+    "* verify if `spacing` is a positive scalar;\n",
+    "* create the matrix $\\mathbf{D}$ and use one of your three functions for calculating the matrix-vector product. \n",
+    "\n",
+    "that receives a $N \\times 1$ data vector $\\mathbf{y}$ and the interval $h$ and returns the first derivatives calculated according to the matrix-vector product presented above. The function must use one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
+    "\n",
+    "Additionally, **create at least one test** for your function `deriv1d`. In this test, create a vector `theta` with the function [`numpy.arange`](https://numpy.org/doc/stable/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*numpy.pi/1000`. Create a data vector `y` by using the [`numpy.sin`](https://numpy.org/doc/stable/reference/generated/numpy.sin.html) function. Then, calculate a vector `z_true` by using the [`numpy.cos`](https://numpy.org/doc/stable/reference/generated/numpy.cos.html) function. Finally, calculate a `z_calc` vector with your function `deriv1d` and compare with the `z_true` vector by using the routine [`numpy.testing.assert_almost_equal`](https://numpy.org/doc/stable/reference/generated/numpy.testing.assert_almost_equal.html). In the routine `numpy.testing.assert_almost_equal`, use `decimal = 3`. Remember that the first and last elements of `z_calc` will be equal to zero. Be careful!"
    ]
   },
   {
@@ -631,9 +705,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
