--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -37,18 +37,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Determine the number of flops required to perform the folowing operations:"
+    "Determine is the number of flops required to perform the folowing operations:"
    ]
   },
   {
@@ -97,9 +88,7 @@
    "source": [
     "**4) Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
     "\n",
-    "Determine the total number of flops required for computing the resulting vector (hit: use the dot product formulation).\n",
-    "\n",
-    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$ with real elements. What is the total number of flops associated with each one?"
+    "Determine the total number of flops required for computing the resulting vector associated with all algorithms to compute the matrix-vector product."
    ]
   },
   {
@@ -108,9 +97,7 @@
    "source": [
     "**5) Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times L$ matrix $\\mathbf{B}$**\n",
     "\n",
-    "Determine the total number of flops required for computing the resulting matrix.\n",
-    "\n",
-    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$ with real elements. What is the total number of flops associated with each one?"
+    "Determine the total number of flops required for computing the resulting vector associated with all algorithms to compute the matrix-matrix product."
    ]
   },
   {
@@ -136,8 +123,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, what is the total number of flops required to compute the resulting matrix by following each approach?"
+    "In this case, what is the total number of flops required to compute the resulting matrix by following each approach? What is the best approach?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the `flops_count.pdf` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -157,9 +158,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
