--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -90,7 +90,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Let $\\mathbf{C}$ be a $N \\times L$ matrix given by:"
@@ -155,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_real(A, B):\n",
+    "    matmat_real_simple(A, B):\n",
     "    \n",
     "        N, M = shape(A)\n",
     "        M, L = shape(B)\n",
@@ -181,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_real(A, B):\n",
+    "    matmat_real_dot(A, B):\n",
     "    \n",
     "        N, M = shape(A)\n",
     "        M, L = shape(B)\n",
@@ -213,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_real(A, B):\n",
+    "    matmat_real_rows(A, B):\n",
     "\n",
     "        N, M = shape(A)\n",
     "        M, L = shape(B)\n",
@@ -221,7 +224,7 @@
     "        C = zeros(N,L)\n",
     "\n",
     "        for i = 0:N-1\n",
-    "            C[i,:] = matrix_vector_real(B[:,:], A[i,:])\n",
+    "            C[i,:] = matvec_real_FUNCTION(B[:,:], A[i,:])\n",
     "        \n",
     "        return C"
    ]
@@ -244,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_real(A, B):\n",
+    "    matmat_real_columns(A, B):\n",
     "\n",
     "        N, M = shape(A)\n",
     "        M, L = shape(B)\n",
@@ -252,7 +255,7 @@
     "        C = zeros(N,L)\n",
     "\n",
     "        for j = 0:L-1\n",
-    "            C[:,j] = matrix_vector_real(A[:,:], B[:,j])\n",
+    "            C[:,j] = matvec_real_FUNCTION(A[:,:], B[:,j])\n",
     "        \n",
     "        return C"
    ]
@@ -315,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_real(A, B):\n",
+    "    matmat_real_outer(A, B):\n",
     "\n",
     "        N, M = shape(A)\n",
     "        M, L = shape(B)\n",
@@ -323,7 +326,7 @@
     "        C = zeros(N,L)\n",
     "\n",
     "        for k = 0:M-1\n",
-    "            C[:,:] += outer_real(A[:,k], B[k,:])\n",
+    "            C[:,:] += outer_real_FUNCTION(A[:,k], B[k,:])\n",
     "        \n",
     "        return C"
    ]
@@ -391,13 +394,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    matrix_matrix_complex(A, B):\n",
+    "    matmat_complex(A, B):\n",
     "\n",
     "        # compute the real and imaginary parts of the product\n",
-    "        C_R  = matrix_matrix_real(Re(A), Re(B))\n",
-    "        C_R -= matrix_matrix_real(Im(A), Im(B))\n",
-    "        C_I  = matrix_matrix_real(Re(A), Im(B))\n",
-    "        C_I += matrix_matrix_real(Im(A), Re(B))\n",
+    "        C_R  = matmat_real[function](Re(A), Re(B))\n",
+    "        C_R -= matmat_real[function](Im(A), Im(B))\n",
+    "        C_I  = matmat_real[function](Re(A), Im(B))\n",
+    "        C_I += matmat_real[function](Im(A), Re(B))\n",
     "        C = C_R + imag*C_I\n",
     "\n",
     "        # return the result        \n",
@@ -415,19 +418,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the functions below according to `template.py`: \n",
-    "* `matmat_real_dumb`\n",
-    "* `matmat_real_numba`\n",
+    "Create the functions below: \n",
+    "* `matmat_real_simple`\n",
     "* `matmat_real_dot` \n",
+    "* `matmat_real_rows`\n",
     "* `matmat_real_columns`\n",
-    "* `matmat_real_matvec`\n",
     "* `matmat_real_outer`\n",
     "* `matmat_complex`\n",
     "    \n",
-    "These functions must pass the following tests defined in `tests_template.py`:\n",
+    "These functions must pass the following tests:\n",
     "* `test_matmat_real_input_dont_match`\n",
     "* `test_matmat_real_functions_compare_numpy_dot`\n",
-    "* `test_matmat_complex_compare_numpy_dot`"
+    "* `test_matmat_real_functions_ignore_complex`\n",
+    "* `test_matmat_complex_compare_numpy_dot`\n",
+    "* `test_matmat_complex_invalid_function`"
    ]
   },
   {
@@ -504,37 +508,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 25.,  28.],\n",
-       "       [ 57.,  64.],\n",
-       "       [ 89., 100.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -558,9 +531,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
