--- a/Content/matrix-norms.ipynb
+++ b/Content/matrix-norms.ipynb
@@ -151,11 +151,32 @@
     "\\frac{1}{\\sqrt{N}} \\, \\| \\mathbf{A} \\|_{1} \\leq \\| \\mathbf{A} \\|_{2} \\leq \\sqrt{M} \\, \\| \\mathbf{A} \\|_{1}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise (optional)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement a function `mat_norm` and its corresponding tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,9 +190,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
