notebooks for matvec and matmat classes

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -524,7 +524,14 @@
     "N = 5 # number of data\n",
     "ws = 3 # window size\n",
     "i0 = ws//2\n",
-    "A = np.array(np.hstack(((1./ws)*np.ones(ws), np.zeros(N - ws + 1))))"
+    "A = np.array(\n",
+    "    np.hstack(\n",
+    "        (\n",
+    "            (1./ws)*np.ones(ws), \n",
+    "            np.zeros(N - ws + 1)\n",
+    "        )\n",
+    "    )\n",
+    ")"
    ]
   },
   {
