--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -224,7 +224,7 @@
     "        C = zeros(N,L)\n",
     "\n",
     "        for i = 0:N-1\n",
-    "            C[i,:] = matvec_real_FUNCTION(B[:,:], A[i,:])\n",
+    "            C[i,:] = matvec_real_FUNCTION(B[:,:].T, A[i,:])\n",
     "        \n",
     "        return C"
    ]
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the j- and k-loops were removed. It is also important to notice that `A[i,:]` is a row vector and `B[:,:]` is a matrix."
+    "Notice that the j- and k-loops were removed. It is also important to notice that `A[i,:]` is a row vector and `B[:,:].T` is the transpose of matrix `B[:,:]`."
    ]
   },
   {
