update exercises until matmat product, review notebook for permutation, diagonal and triangular matrices

--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using the notebook [`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb), it can be shown that the product $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ can be calculated by following different algorithms:"
+    "By using the notebook `matrix-vector.ipynb`, it can be shown that the product $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ can be calculated by following different algorithms:"
    ]
   },
   {
@@ -136,7 +136,7 @@
     "**Algorithm 5**\n",
     "\n",
     "    for j = 0:N-1\n",
-    "        y[:j] = y[:j] + U[:j,j]*x[j]"
+    "        y[:j] = y[:j] + scalar_vec(x[j], U[:j,j])"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "**Algorithm 10**\n",
     "\n",
     "    for j = 0:N-1\n",
-    "        z[j:] = z[j:] + L[j:,j]*x[j]"
+    "        z[j:] = z[j:] + scalar_vec(x[j], L[j:,j])"
    ]
   },
   {
@@ -210,24 +210,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement the functions `matvec_triu_prod3`, `matvec_triu_prod5`, `matvec_tril_prod8` and `matvec_tril_prod10` defined by, respectively, the Algorithms 3, 5, 8 and 10 given above. The required functions must use the templates given below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def matvec_triu_prod3(U, x, check_input=True):\n",
+    "    '''\n",
+    "    Compute the product of an upper triangular matrix U \n",
+    "    and a vector x. All elements are real numbers.\n",
+    "    \n",
+    "    Each element of the resultant vector is obtained by \n",
+    "    computing a dot product.\n",
     "\n",
-    "What is the total number of flops associated with each algorithm presented above?"
+    "    Parameters\n",
+    "    ----------\n",
+    "    U : numpy array 2d\n",
+    "        Upper triangular matrix.\n",
+    "    x : numpy array 1d\n",
+    "        Vector that postmultiply the triangular matrix U.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : numpy array 1d\n",
+    "        Vector obtained from the product U x.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2"
+    "```python\n",
+    "def matvec_triu_prod5(U, x, check_input=True):\n",
+    "    '''\n",
+    "    Compute the product of an upper triangular matrix U \n",
+    "    and a vector x. All elements are real numbers.\n",
+    "    \n",
+    "    The elements of the resultant vector are obtained by \n",
+    "    computing successive scalar vector products.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    U : numpy array 2d\n",
+    "        Upper triangular matrix.\n",
+    "    x : numpy array 1d\n",
+    "        Vector that postmultiply the triangular matrix U.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : numpy array 1d\n",
+    "        Vector obtained from the product U x.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create four functions called `matvec_triu_prod3`, `matvec_triu_prod5`, `matvec_tril_prod8` and `matvec_tril_prod10` to implement the algorithms 3, 5, 8, and 10, respectively. Each algorithm must receive the triangular matrix $\\mathbf{U}$ or $\\mathbf{L}$ and the vector $\\mathbf{x}$ and return the resultant vector $\\mathbf{y}$ or $\\mathbf{z}$, according to the text presented above. The cells below show how to create triangular matrices $\\mathbf{U}$ and $\\mathbf{L}$ from full matrices.\n",
-    "2. In your `test_my_functions.py` file, create at least two tests. The first test must compare the results produced by the functions `matvec_triu_prod3` and `matvec_triu_prod5` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). The second test must compare the results produced by the functions `matvec_tril_prod8` and `matvec_tril_prod10` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)"
+    "```python\n",
+    "def matvec_triu_prod8(L, x, check_input=True):\n",
+    "    '''\n",
+    "    Compute the product of an lower triangular matrix L \n",
+    "    and a vector x. All elements are real numbers.\n",
+    "    \n",
+    "    Each element of the resultant vector is obtained by \n",
+    "    computing a dot product.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    L : numpy array 2d\n",
+    "        Lower triangular matrix.\n",
+    "    x : numpy array 1d\n",
+    "        Vector that postmultiply the triangular matrix U.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : numpy array 1d\n",
+    "        Vector obtained from the product U x.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def matvec_triu_prod10(U, x, check_input=True):\n",
+    "    '''\n",
+    "    Compute the product of an lower triangular matrix L \n",
+    "    and a vector x. All elements are real numbers.\n",
+    "    \n",
+    "    The elements of the resultant vector are obtained by \n",
+    "    computing successive scalar vector products.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    L : numpy array 2d\n",
+    "        Lower triangular matrix.\n",
+    "    x : numpy array 1d\n",
+    "        Vector that postmultiply the triangular matrix U.\n",
+    "    check_input : boolean\n",
+    "        If True, verify if the input is valid. Default is True.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : numpy array 1d\n",
+    "        Vector obtained from the product U x.\n",
+    "    '''\n",
+    "\n",
+    "    # create your code here\n",
+    "    \n",
+    "    return result\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The functions **must**: \n",
+    "* verify if the given triangular matrix is square;\n",
+    "* verify if `x` is a numpy array with ndim = 1;\n",
+    "* assert that the number of rows/columns of the triangular matrix is equal to the number of elements forming `x`;\n",
+    "* ignore possible imaginary of the input parameters;\n",
+    "* use your `scalar_vec_real` and `dot_real` functions;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, **create at least two tests**. The first test must compare the results produced by the functions `matvec_triu_prod3` and `matvec_triu_prod5` with the result produced by the routine [`numpy.dot`](https://numpy.org/doc/stable/reference/generated/numpy.dot.html). The second test must compare the results produced by the functions `matvec_tril_prod8` and `matvec_tril_prod10` with the result produced by the routine [`numpy.dot`](https://numpy.org/doc/stable/reference/generated/numpy.dot.html)."
    ]
   },
   {
@@ -241,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below uses the routines [`numpy.random.rand`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html), [`numpy.triu`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.triu.html), and [`numpy.tril`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.tril.html)."
+    "The code below uses the routines [`Random generator`](https://numpy.org/doc/stable/reference/random/generator.html), [`numpy.triu`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.triu.html), and [`numpy.tril`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.tril.html)."
    ]
   },
   {
@@ -268,7 +413,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = 10*np.random.rand(N,N)"
+    "rng = np.random.default_rng(12345)\n",
+    "A = 10*rng.random(N,N)"
    ]
   },
   {
@@ -379,9 +525,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
