--- a/Content/diagonal_matrices.ipynb
+++ b/Content/diagonal_matrices.ipynb
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.82407404, 0.95397501, 0.12399036, 0.32575491, 0.06702674])"
+       "array([0.3063378 , 0.56646481, 0.26361068, 0.16406177, 0.47066708])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Now, create the diagonal matrix `D` by using the routine [`numpy.diag`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.diag.html)"
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,20 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.82407404, 0.        , 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.95397501, 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.12399036, 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.32575491, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.06702674]])"
+       "array([[0.3063378 , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.56646481, 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.26361068, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.16406177, 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.47066708]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +229,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "You can also extract the diagonal of a given matrix by using the routine [`numpy.diag`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.diag.html)"
@@ -234,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.82407404, 0.95397501, 0.12399036, 0.32575491, 0.06702674])"
+       "array([0.3063378 , 0.56646481, 0.26361068, 0.16406177, 0.47066708])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,9 +283,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
