--- a/Content/permutation_matrices.ipynb
+++ b/Content/permutation_matrices.ipynb
@@ -252,6 +252,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The inverse of an orthogonal matrix is its transpose! It means that, if $\\mathbf{G}$ is a generic orthogonal matrix, then:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G} \\, \\mathbf{G}^{T} = \\mathbf{G}^{T} \\mathbf{G} = \\mathbf{I}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -393,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Product of a permutation matrix a vector"
+    "#### Product of a permutation matrix and a vector"
    ]
   },
   {
@@ -410,28 +421,9 @@
     }
    ],
    "source": [
+    "# Create a vector\n",
     "x = np.arange(4.)*10\n",
     "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0., 10., 20., 30.])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
    ]
   },
   {
@@ -451,6 +443,7 @@
     }
    ],
    "source": [
+    "# Compute the product of E and x\n",
     "E@x"
    ]
   },
@@ -471,6 +464,8 @@
     }
    ],
    "source": [
+    "# Note that the product Ex in the cell above simply put the elements of x in the reverse order.\n",
+    "# Hence, the product Ex can be replaced by an operation that directly reverse the elements of x.\n",
     "x[::-1]"
    ]
   },
@@ -511,6 +506,7 @@
     }
    ],
    "source": [
+    "# Compute the product of D and x\n",
     "D@x"
    ]
   },
@@ -531,6 +527,7 @@
     }
    ],
    "source": [
+    "# Note that the product Dx simply shift the elements of x \n",
     "x[[3,0,1,2]]"
    ]
   },
@@ -551,6 +548,7 @@
     }
    ],
    "source": [
+    "# The product Dx is equivalent to the function numpy.roll\n",
     "np.roll(a=x,shift=1)"
    ]
   },
@@ -571,6 +569,7 @@
     }
    ],
    "source": [
+    "# Compute the product of U and x\n",
     "U@x"
    ]
   },
@@ -580,6 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Again, the product Ux simply shifts the elements of x\n",
     "x[[1,2,3,0]]"
    ]
   },
@@ -600,6 +600,7 @@
     }
    ],
    "source": [
+    "# The product Ux can also be obtained from function numpy.roll\n",
     "np.roll(a=x,shift=-1)"
    ]
   },
@@ -627,39 +628,15 @@
     }
    ],
    "source": [
+    "# Create a matrix\n",
     "A = np.arange(16.).reshape((4,4))*10\n",
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0.,  10.,  20.,  30.],\n",
-       "       [ 40.,  50.,  60.,  70.],\n",
-       "       [ 80.,  90., 100., 110.],\n",
-       "       [120., 130., 140., 150.]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -676,6 +653,7 @@
     }
    ],
    "source": [
+    "# Compute the product EA\n",
     "E@A"
    ]
   },
@@ -699,6 +677,7 @@
     }
    ],
    "source": [
+    "# Note that, premultiplying A by E simply reverse the order of A rows\n",
     "A[::-1,:]"
    ]
   },
@@ -722,15 +701,14 @@
     }
    ],
    "source": [
+    "# The product EA can be obtained by simply reversing the rows of A\n",
     "A[[3,2,1,0],:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,6 +725,7 @@
     }
    ],
    "source": [
+    "# Compute the product AE\n",
     "A@E"
    ]
   },
@@ -770,6 +749,7 @@
     }
    ],
    "source": [
+    "# Note that, postmultiplying A by E simply reverse the order of A columns\n",
     "A[:,::-1]"
    ]
   },
@@ -793,6 +773,7 @@
     }
    ],
    "source": [
+    "# The product EA can be obtained by simply reversing the columns of A\n",
     "A[:,[3,2,1,0]]"
    ]
   },
@@ -816,6 +797,7 @@
     }
    ],
    "source": [
+    "# Compute the product DA\n",
     "D@A"
    ]
   },
@@ -839,15 +821,14 @@
     }
    ],
    "source": [
+    "# Note that premultiplying A by D applies a downward shift to the rows of A\n",
     "A[[3,0,1,2],:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -864,6 +845,7 @@
     }
    ],
    "source": [
+    "# The product DA is equivalent to applying the function numpy.roll to the rows of A\n",
     "np.roll(a=A,shift=1,axis=0)"
    ]
   },
@@ -887,6 +869,7 @@
     }
    ],
    "source": [
+    "# Compute the product AD\n",
     "A@D"
    ]
   },
@@ -910,6 +893,7 @@
     }
    ],
    "source": [
+    "# Note that postmultiplying A by D applies a rightward shift to the rows of A\n",
     "A[:,[1,2,3,0]]"
    ]
   },
@@ -933,6 +917,7 @@
     }
    ],
    "source": [
+    "# The product DA is equivalent to applying the function numpy.roll to the columns of A\n",
     "np.roll(a=A,shift=-1,axis=1)"
    ]
   },
@@ -985,9 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1100,9 +1083,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
