--- a/Content/permutation_matrices.ipynb
+++ b/Content/permutation_matrices.ipynb
@@ -196,7 +196,7 @@
    ],
    "source": [
     "# Exchange permutation\n",
-    "E = np.identity(4)[:,::-1]\n",
+    "E = np.identity(4)[::-1,:]\n",
     "print(E)"
    ]
   },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,8 @@
    ],
    "source": [
     "# Upshift permutation\n",
-    "U = D.T\n",
+    "#U = D.T\n",
+    "U = np.roll(a=np.identity(4), shift=-1, axis=0)\n",
     "print(U)"
    ]
   },
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +425,29 @@
     "# Create a vector\n",
     "x = np.arange(4.)*10\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E"
    ]
   },
   {
@@ -449,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +482,7 @@
        "array([30., 20., 10.,  0.])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +504,7 @@
        "array([30., 20., 10.,  0.])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +524,7 @@
        "array([30.,  0., 10., 20.])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +545,7 @@
        "array([30.,  0., 10., 20.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +566,7 @@
        "array([30.,  0., 10., 20.])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +587,7 @@
        "array([10., 20., 30.,  0.])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,17 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Again, the product Ux simply shifts the elements of x\n",
-    "x[[1,2,3,0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +608,28 @@
        "array([10., 20., 30.,  0.])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Again, the product Ux simply shifts the elements of x\n",
+    "x[[1,2,3,0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 20., 30.,  0.])"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,29 +648,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  0.  10.  20.  30.]\n",
-      " [ 40.  50.  60.  70.]\n",
-      " [ 80.  90. 100. 110.]\n",
-      " [120. 130. 140. 150.]]\n"
+      "[[  0  10  20  30]\n",
+      " [ 40  50  60  70]\n",
+      " [ 80  90 100 110]\n",
+      " [120 130 140 150]]\n"
      ]
     }
    ],
    "source": [
     "# Create a matrix\n",
-    "A = np.arange(16.).reshape((4,4))*10\n",
+    "A = np.arange(16).reshape((4,4))*10\n",
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +682,7 @@
        "       [  0.,  10.,  20.,  30.]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,19 +694,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[120., 130., 140., 150.],\n",
-       "       [ 80.,  90., 100., 110.],\n",
-       "       [ 40.,  50.,  60.,  70.],\n",
-       "       [  0.,  10.,  20.,  30.]])"
+       "array([[120, 130, 140, 150],\n",
+       "       [ 80,  90, 100, 110],\n",
+       "       [ 40,  50,  60,  70],\n",
+       "       [  0,  10,  20,  30]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,19 +718,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[120., 130., 140., 150.],\n",
-       "       [ 80.,  90., 100., 110.],\n",
-       "       [ 40.,  50.,  60.,  70.],\n",
-       "       [  0.,  10.,  20.,  30.]])"
+       "array([[120, 130, 140, 150],\n",
+       "       [ 80,  90, 100, 110],\n",
+       "       [ 40,  50,  60,  70],\n",
+       "       [  0,  10,  20,  30]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +754,7 @@
        "       [150., 140., 130., 120.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,19 +766,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 30.,  20.,  10.,   0.],\n",
-       "       [ 70.,  60.,  50.,  40.],\n",
-       "       [110., 100.,  90.,  80.],\n",
-       "       [150., 140., 130., 120.]])"
+       "array([[ 30,  20,  10,   0],\n",
+       "       [ 70,  60,  50,  40],\n",
+       "       [110, 100,  90,  80],\n",
+       "       [150, 140, 130, 120]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,19 +790,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 30.,  20.,  10.,   0.],\n",
-       "       [ 70.,  60.,  50.,  40.],\n",
-       "       [110., 100.,  90.,  80.],\n",
-       "       [150., 140., 130., 120.]])"
+       "array([[ 30,  20,  10,   0],\n",
+       "       [ 70,  60,  50,  40],\n",
+       "       [110, 100,  90,  80],\n",
+       "       [150, 140, 130, 120]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +826,7 @@
        "       [ 80.,  90., 100., 110.]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,19 +838,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[120., 130., 140., 150.],\n",
-       "       [  0.,  10.,  20.,  30.],\n",
-       "       [ 40.,  50.,  60.,  70.],\n",
-       "       [ 80.,  90., 100., 110.]])"
+       "array([[120, 130, 140, 150],\n",
+       "       [  0,  10,  20,  30],\n",
+       "       [ 40,  50,  60,  70],\n",
+       "       [ 80,  90, 100, 110]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,19 +862,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[120., 130., 140., 150.],\n",
-       "       [  0.,  10.,  20.,  30.],\n",
-       "       [ 40.,  50.,  60.,  70.],\n",
-       "       [ 80.,  90., 100., 110.]])"
+       "array([[120, 130, 140, 150],\n",
+       "       [  0,  10,  20,  30],\n",
+       "       [ 40,  50,  60,  70],\n",
+       "       [ 80,  90, 100, 110]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +898,7 @@
        "       [130., 140., 150., 120.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,19 +910,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 10.,  20.,  30.,   0.],\n",
-       "       [ 50.,  60.,  70.,  40.],\n",
-       "       [ 90., 100., 110.,  80.],\n",
-       "       [130., 140., 150., 120.]])"
+       "array([[ 10,  20,  30,   0],\n",
+       "       [ 50,  60,  70,  40],\n",
+       "       [ 90, 100, 110,  80],\n",
+       "       [130, 140, 150, 120]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,19 +934,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 10.,  20.,  30.,   0.],\n",
-       "       [ 50.,  60.,  70.,  40.],\n",
-       "       [ 90., 100., 110.,  80.],\n",
-       "       [130., 140., 150., 120.]])"
+       "array([[ 10,  20,  30,   0],\n",
+       "       [ 50,  60,  70,  40],\n",
+       "       [ 90, 100, 110,  80],\n",
+       "       [130, 140, 150, 120]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +970,7 @@
        "       [  0.,  10.,  20.,  30.]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,19 +981,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 40.,  50.,  60.,  70.],\n",
-       "       [ 80.,  90., 100., 110.],\n",
-       "       [120., 130., 140., 150.],\n",
-       "       [  0.,  10.,  20.,  30.]])"
+       "array([[ 40,  50,  60,  70],\n",
+       "       [ 80,  90, 100, 110],\n",
+       "       [120, 130, 140, 150],\n",
+       "       [  0,  10,  20,  30]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,19 +1004,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 40.,  50.,  60.,  70.],\n",
-       "       [ 80.,  90., 100., 110.],\n",
-       "       [120., 130., 140., 150.],\n",
-       "       [  0.,  10.,  20.,  30.]])"
+       "array([[ 40,  50,  60,  70],\n",
+       "       [ 80,  90, 100, 110],\n",
+       "       [120, 130, 140, 150],\n",
+       "       [  0,  10,  20,  30]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1039,7 @@
        "       [150., 120., 130., 140.]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,19 +1050,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 30.,   0.,  10.,  20.],\n",
-       "       [ 70.,  40.,  50.,  60.],\n",
-       "       [110.,  80.,  90., 100.],\n",
-       "       [150., 120., 130., 140.]])"
+       "array([[ 30,   0,  10,  20],\n",
+       "       [ 70,  40,  50,  60],\n",
+       "       [110,  80,  90, 100],\n",
+       "       [150, 120, 130, 140]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,19 +1073,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 30.,   0.,  10.,  20.],\n",
-       "       [ 70.,  40.,  50.,  60.],\n",
-       "       [110.,  80.,  90., 100.],\n",
-       "       [150., 120., 130., 140.]])"
+       "array([[ 30,   0,  10,  20],\n",
+       "       [ 70,  40,  50,  60],\n",
+       "       [110,  80,  90, 100],\n",
+       "       [150, 120, 130, 140]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
