small changes in text

--- a/Content/diagonal_matrices.ipynb
+++ b/Content/diagonal_matrices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diagonal matrices - part 1"
+    "# Diagonal matrices"
    ]
   },
   {
@@ -119,14 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Deduce the pseudo-codes shown above for computing $\\mathbf{D}\\mathbf{x}$, $\\mathbf{D}\\mathbf{B}$ and $\\mathbf{B}\\mathbf{D}$."
+    "How to deduce the pseudo-codes shown above for computing $\\mathbf{D}\\mathbf{x}$, $\\mathbf{D}\\mathbf{B}$ and $\\mathbf{B}\\mathbf{D}$?"
    ]
   },
   {
