--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Triangular matrices - part 1"
+    "# Triangular matrices"
    ]
   },
   {
